# serializer version: 1
# name: test_climate_snapshot[climate.test_room_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_room_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'senz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '1001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_room_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 18.4,
      'friendly_name': 'Test room 1',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 5,
      'supported_features': <ClimateEntityFeature: 1>,
      'temperature': 19.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_room_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_snapshot[climate.test_room_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_room_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'senz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '1002',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_snapshot[climate.test_room_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 9.3,
      'friendly_name': 'Test room 2',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 5,
      'supported_features': <ClimateEntityFeature: 1>,
      'temperature': 6.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_room_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
